# realtime-data-final

./: Cargo.toml  README.md
segtree/: Cargo.toml
segtree/src/: lib.rs  main.rs
server/: Cargo.toml
server/data/: observation.csv
server/data/さいたま/: 1970.csv  1980.csv  1990.csv  2000.csv  2010.csv  2020.csv
server/data/つくば/: 1920.csv  1930.csv  1940.csv  1950.csv  1960.csv  1970.csv  1980.csv  1990.csv  2000.csv  2010.csv  2020.csv
server/data/みなかみ/: 1970.csv  1980.csv  1990.csv  2000.csv  2010.csv  2020.csv
server/data/三浦/: 1970.csv  1980.csv  1990.csv  2000.csv  2010.csv  2020.csv
server/data/八王子/: 1970.csv  1980.csv  1990.csv  2000.csv  2010.csv  2020.csv
server/data/前橋/: 1970.csv  1980.csv  1990.csv  2000.csv  2010.csv  2020.csv
server/data/北茨城/: 1970.csv  1980.csv  1990.csv  2000.csv  2010.csv  2020.csv
server/data/千葉/: 1970.csv  1980.csv  1990.csv  2000.csv  2010.csv  2020.csv
server/data/古河/: 1970.csv  1980.csv  1990.csv  2000.csv  2010.csv  2020.csv
server/data/大子/: 1970.csv  1980.csv  1990.csv  2000.csv  2010.csv  2020.csv
server/data/奥日光（日光）/: 1970.csv  1980.csv  1990.csv  2000.csv  2010.csv  2020.csv
server/data/宇都宮/: 1970.csv  1980.csv  1990.csv  2000.csv  2010.csv  2020.csv
server/data/富士山/: 1970.csv  1980.csv  1990.csv  2000.csv  2010.csv  2020.csv
server/data/小田原/: 1970.csv  1980.csv  1990.csv  2000.csv  2010.csv  2020.csv
server/data/日立/: 1970.csv  1980.csv  1990.csv  2000.csv  2010.csv  2020.csv
server/src/: lib.rs  main.rs  observation_points.rs
src/: aggregator.rs  main.rs  prefecture.rs  window_aggregator.rs  ws.rs
(+102 files in other folders)
